Revert "Replace Collections. options with MarshallableCollections alternatives"
This reverts commit 8b7986148bf2e693663d770ad58c6c6a9e5938e9.